// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WeatherCard /> do not show details 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    weather={
        Object {
            "temperature": 26,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="weather-card__temperature--hot"
>
          26
          <span
                    className="weather-card__temperature__celcius"
          >
                    °
          </span>
</span>,
        <section
          className="weather-card__footer"
>
          <div
                    className="weather-card__footer__row"
          >
                    <div
                              className="weather-card__update-at"
                    >
                              <p>
                                        Updated at 
                                        <time
                                                  dateTime={undefined}
                                        />
                              </p>
                    </div>
          </div>
</section>,
      ],
      "className": "weather-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            26,
            <span
              className="weather-card__temperature__celcius"
>
              °
</span>,
          ],
          "className": "weather-card__temperature--hot",
        },
        "ref": null,
        "rendered": Array [
          26,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "°",
              "className": "weather-card__temperature__celcius",
            },
            "ref": null,
            "rendered": "°",
            "type": "span",
          },
        ],
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <div
              className="weather-card__footer__row"
>
              <div
                            className="weather-card__update-at"
              >
                            <p>
                                          Updated at 
                                          <time
                                                        dateTime={undefined}
                                          />
                            </p>
              </div>
</div>,
          ],
          "className": "weather-card__footer",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="weather-card__update-at"
>
                <p>
                                Updated at 
                                <time
                                                dateTime={undefined}
                                />
                </p>
</div>,
              "className": "weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Updated at 
                  <time
                                    dateTime={undefined}
                  />
</p>,
                "className": "weather-card__update-at",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Updated at ",
                    <time
                      dateTime={undefined}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Updated at ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "dateTime": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "time",
                  },
                ],
                "type": "p",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="weather-card__temperature--hot"
>
            26
            <span
                        className="weather-card__temperature__celcius"
            >
                        °
            </span>
</span>,
          <section
            className="weather-card__footer"
>
            <div
                        className="weather-card__footer__row"
            >
                        <div
                                    className="weather-card__update-at"
                        >
                                    <p>
                                                Updated at 
                                                <time
                                                            dateTime={undefined}
                                                />
                                    </p>
                        </div>
            </div>
</section>,
        ],
        "className": "weather-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              26,
              <span
                className="weather-card__temperature__celcius"
>
                °
</span>,
            ],
            "className": "weather-card__temperature--hot",
          },
          "ref": null,
          "rendered": Array [
            26,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "°",
                "className": "weather-card__temperature__celcius",
              },
              "ref": null,
              "rendered": "°",
              "type": "span",
            },
          ],
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <div
                className="weather-card__footer__row"
>
                <div
                                className="weather-card__update-at"
                >
                                <p>
                                                Updated at 
                                                <time
                                                                dateTime={undefined}
                                                />
                                </p>
                </div>
</div>,
            ],
            "className": "weather-card__footer",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="weather-card__update-at"
>
                  <p>
                                    Updated at 
                                    <time
                                                      dateTime={undefined}
                                    />
                  </p>
</div>,
                "className": "weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Updated at 
                    <time
                                        dateTime={undefined}
                    />
</p>,
                  "className": "weather-card__update-at",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Updated at ",
                      <time
                        dateTime={undefined}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Updated at ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": undefined,
                        "dateTime": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "time",
                    },
                  ],
                  "type": "p",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<WeatherCard /> render formatted update at time 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    weather={
        Object {
            "updatedAt": 1535636728998,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="weather-card__temperature--normal"
>
          <span
                    className="weather-card__temperature__celcius"
          >
                    °
          </span>
</span>,
        <section
          className="weather-card__footer"
>
          <div
                    className="weather-card__footer__row"
          >
                    <div
                              className="weather-card__update-at"
                    >
                              <p>
                                        Updated at 
                                        <time
                                                  dateTime="2018-08-30 10:20"
                                        >
                                                  2018-08-30 10:20
                                        </time>
                              </p>
                    </div>
          </div>
</section>,
      ],
      "className": "weather-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <span
              className="weather-card__temperature__celcius"
>
              °
</span>,
          ],
          "className": "weather-card__temperature--normal",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "°",
              "className": "weather-card__temperature__celcius",
            },
            "ref": null,
            "rendered": "°",
            "type": "span",
          },
        ],
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <div
              className="weather-card__footer__row"
>
              <div
                            className="weather-card__update-at"
              >
                            <p>
                                          Updated at 
                                          <time
                                                        dateTime="2018-08-30 10:20"
                                          >
                                                        2018-08-30 10:20
                                          </time>
                            </p>
              </div>
</div>,
          ],
          "className": "weather-card__footer",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="weather-card__update-at"
>
                <p>
                                Updated at 
                                <time
                                                dateTime="2018-08-30 10:20"
                                >
                                                2018-08-30 10:20
                                </time>
                </p>
</div>,
              "className": "weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Updated at 
                  <time
                                    dateTime="2018-08-30 10:20"
                  >
                                    2018-08-30 10:20
                  </time>
</p>,
                "className": "weather-card__update-at",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Updated at ",
                    <time
                      dateTime="2018-08-30 10:20"
>
                      2018-08-30 10:20
</time>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Updated at ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "2018-08-30 10:20",
                      "dateTime": "2018-08-30 10:20",
                    },
                    "ref": null,
                    "rendered": "2018-08-30 10:20",
                    "type": "time",
                  },
                ],
                "type": "p",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="weather-card__temperature--normal"
>
            <span
                        className="weather-card__temperature__celcius"
            >
                        °
            </span>
</span>,
          <section
            className="weather-card__footer"
>
            <div
                        className="weather-card__footer__row"
            >
                        <div
                                    className="weather-card__update-at"
                        >
                                    <p>
                                                Updated at 
                                                <time
                                                            dateTime="2018-08-30 10:20"
                                                >
                                                            2018-08-30 10:20
                                                </time>
                                    </p>
                        </div>
            </div>
</section>,
        ],
        "className": "weather-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <span
                className="weather-card__temperature__celcius"
>
                °
</span>,
            ],
            "className": "weather-card__temperature--normal",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "°",
                "className": "weather-card__temperature__celcius",
              },
              "ref": null,
              "rendered": "°",
              "type": "span",
            },
          ],
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <div
                className="weather-card__footer__row"
>
                <div
                                className="weather-card__update-at"
                >
                                <p>
                                                Updated at 
                                                <time
                                                                dateTime="2018-08-30 10:20"
                                                >
                                                                2018-08-30 10:20
                                                </time>
                                </p>
                </div>
</div>,
            ],
            "className": "weather-card__footer",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="weather-card__update-at"
>
                  <p>
                                    Updated at 
                                    <time
                                                      dateTime="2018-08-30 10:20"
                                    >
                                                      2018-08-30 10:20
                                    </time>
                  </p>
</div>,
                "className": "weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Updated at 
                    <time
                                        dateTime="2018-08-30 10:20"
                    >
                                        2018-08-30 10:20
                    </time>
</p>,
                  "className": "weather-card__update-at",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Updated at ",
                      <time
                        dateTime="2018-08-30 10:20"
>
                        2018-08-30 10:20
</time>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Updated at ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "2018-08-30 10:20",
                        "dateTime": "2018-08-30 10:20",
                      },
                      "ref": null,
                      "rendered": "2018-08-30 10:20",
                      "type": "time",
                    },
                  ],
                  "type": "p",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<WeatherCard /> set cold weather temperature 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    weather={
        Object {
            "temperature": 5,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="weather-card__temperature--cold"
>
          5
          <span
                    className="weather-card__temperature__celcius"
          >
                    °
          </span>
</span>,
        <section
          className="weather-card__footer"
>
          <div
                    className="weather-card__footer__row"
          >
                    <div
                              className="weather-card__update-at"
                    >
                              <p>
                                        Updated at 
                                        <time
                                                  dateTime={undefined}
                                        />
                              </p>
                    </div>
          </div>
</section>,
      ],
      "className": "weather-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            5,
            <span
              className="weather-card__temperature__celcius"
>
              °
</span>,
          ],
          "className": "weather-card__temperature--cold",
        },
        "ref": null,
        "rendered": Array [
          5,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "°",
              "className": "weather-card__temperature__celcius",
            },
            "ref": null,
            "rendered": "°",
            "type": "span",
          },
        ],
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <div
              className="weather-card__footer__row"
>
              <div
                            className="weather-card__update-at"
              >
                            <p>
                                          Updated at 
                                          <time
                                                        dateTime={undefined}
                                          />
                            </p>
              </div>
</div>,
          ],
          "className": "weather-card__footer",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="weather-card__update-at"
>
                <p>
                                Updated at 
                                <time
                                                dateTime={undefined}
                                />
                </p>
</div>,
              "className": "weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Updated at 
                  <time
                                    dateTime={undefined}
                  />
</p>,
                "className": "weather-card__update-at",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Updated at ",
                    <time
                      dateTime={undefined}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Updated at ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "dateTime": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "time",
                  },
                ],
                "type": "p",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="weather-card__temperature--cold"
>
            5
            <span
                        className="weather-card__temperature__celcius"
            >
                        °
            </span>
</span>,
          <section
            className="weather-card__footer"
>
            <div
                        className="weather-card__footer__row"
            >
                        <div
                                    className="weather-card__update-at"
                        >
                                    <p>
                                                Updated at 
                                                <time
                                                            dateTime={undefined}
                                                />
                                    </p>
                        </div>
            </div>
</section>,
        ],
        "className": "weather-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              5,
              <span
                className="weather-card__temperature__celcius"
>
                °
</span>,
            ],
            "className": "weather-card__temperature--cold",
          },
          "ref": null,
          "rendered": Array [
            5,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "°",
                "className": "weather-card__temperature__celcius",
              },
              "ref": null,
              "rendered": "°",
              "type": "span",
            },
          ],
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <div
                className="weather-card__footer__row"
>
                <div
                                className="weather-card__update-at"
                >
                                <p>
                                                Updated at 
                                                <time
                                                                dateTime={undefined}
                                                />
                                </p>
                </div>
</div>,
            ],
            "className": "weather-card__footer",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="weather-card__update-at"
>
                  <p>
                                    Updated at 
                                    <time
                                                      dateTime={undefined}
                                    />
                  </p>
</div>,
                "className": "weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Updated at 
                    <time
                                        dateTime={undefined}
                    />
</p>,
                  "className": "weather-card__update-at",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Updated at ",
                      <time
                        dateTime={undefined}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Updated at ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": undefined,
                        "dateTime": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "time",
                    },
                  ],
                  "type": "p",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<WeatherCard /> set hot weather temperature 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    weather={
        Object {
            "temperature": 26,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="weather-card__temperature--hot"
>
          26
          <span
                    className="weather-card__temperature__celcius"
          >
                    °
          </span>
</span>,
        <section
          className="weather-card__footer"
>
          <div
                    className="weather-card__footer__row"
          >
                    <div
                              className="weather-card__update-at"
                    >
                              <p>
                                        Updated at 
                                        <time
                                                  dateTime={undefined}
                                        />
                              </p>
                    </div>
          </div>
</section>,
      ],
      "className": "weather-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            26,
            <span
              className="weather-card__temperature__celcius"
>
              °
</span>,
          ],
          "className": "weather-card__temperature--hot",
        },
        "ref": null,
        "rendered": Array [
          26,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "°",
              "className": "weather-card__temperature__celcius",
            },
            "ref": null,
            "rendered": "°",
            "type": "span",
          },
        ],
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <div
              className="weather-card__footer__row"
>
              <div
                            className="weather-card__update-at"
              >
                            <p>
                                          Updated at 
                                          <time
                                                        dateTime={undefined}
                                          />
                            </p>
              </div>
</div>,
          ],
          "className": "weather-card__footer",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="weather-card__update-at"
>
                <p>
                                Updated at 
                                <time
                                                dateTime={undefined}
                                />
                </p>
</div>,
              "className": "weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Updated at 
                  <time
                                    dateTime={undefined}
                  />
</p>,
                "className": "weather-card__update-at",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Updated at ",
                    <time
                      dateTime={undefined}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Updated at ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "dateTime": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "time",
                  },
                ],
                "type": "p",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="weather-card__temperature--hot"
>
            26
            <span
                        className="weather-card__temperature__celcius"
            >
                        °
            </span>
</span>,
          <section
            className="weather-card__footer"
>
            <div
                        className="weather-card__footer__row"
            >
                        <div
                                    className="weather-card__update-at"
                        >
                                    <p>
                                                Updated at 
                                                <time
                                                            dateTime={undefined}
                                                />
                                    </p>
                        </div>
            </div>
</section>,
        ],
        "className": "weather-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              26,
              <span
                className="weather-card__temperature__celcius"
>
                °
</span>,
            ],
            "className": "weather-card__temperature--hot",
          },
          "ref": null,
          "rendered": Array [
            26,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "°",
                "className": "weather-card__temperature__celcius",
              },
              "ref": null,
              "rendered": "°",
              "type": "span",
            },
          ],
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <div
                className="weather-card__footer__row"
>
                <div
                                className="weather-card__update-at"
                >
                                <p>
                                                Updated at 
                                                <time
                                                                dateTime={undefined}
                                                />
                                </p>
                </div>
</div>,
            ],
            "className": "weather-card__footer",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="weather-card__update-at"
>
                  <p>
                                    Updated at 
                                    <time
                                                      dateTime={undefined}
                                    />
                  </p>
</div>,
                "className": "weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Updated at 
                    <time
                                        dateTime={undefined}
                    />
</p>,
                  "className": "weather-card__update-at",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Updated at ",
                      <time
                        dateTime={undefined}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Updated at ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": undefined,
                        "dateTime": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "time",
                    },
                  ],
                  "type": "p",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<WeatherCard /> set normal weather temperature 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    weather={
        Object {
            "temperature": 24,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="weather-card__temperature--normal"
>
          24
          <span
                    className="weather-card__temperature__celcius"
          >
                    °
          </span>
</span>,
        <section
          className="weather-card__footer"
>
          <div
                    className="weather-card__footer__row"
          >
                    <div
                              className="weather-card__update-at"
                    >
                              <p>
                                        Updated at 
                                        <time
                                                  dateTime={undefined}
                                        />
                              </p>
                    </div>
          </div>
</section>,
      ],
      "className": "weather-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            24,
            <span
              className="weather-card__temperature__celcius"
>
              °
</span>,
          ],
          "className": "weather-card__temperature--normal",
        },
        "ref": null,
        "rendered": Array [
          24,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "°",
              "className": "weather-card__temperature__celcius",
            },
            "ref": null,
            "rendered": "°",
            "type": "span",
          },
        ],
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <div
              className="weather-card__footer__row"
>
              <div
                            className="weather-card__update-at"
              >
                            <p>
                                          Updated at 
                                          <time
                                                        dateTime={undefined}
                                          />
                            </p>
              </div>
</div>,
          ],
          "className": "weather-card__footer",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="weather-card__update-at"
>
                <p>
                                Updated at 
                                <time
                                                dateTime={undefined}
                                />
                </p>
</div>,
              "className": "weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Updated at 
                  <time
                                    dateTime={undefined}
                  />
</p>,
                "className": "weather-card__update-at",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Updated at ",
                    <time
                      dateTime={undefined}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Updated at ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "dateTime": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "time",
                  },
                ],
                "type": "p",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="weather-card__temperature--normal"
>
            24
            <span
                        className="weather-card__temperature__celcius"
            >
                        °
            </span>
</span>,
          <section
            className="weather-card__footer"
>
            <div
                        className="weather-card__footer__row"
            >
                        <div
                                    className="weather-card__update-at"
                        >
                                    <p>
                                                Updated at 
                                                <time
                                                            dateTime={undefined}
                                                />
                                    </p>
                        </div>
            </div>
</section>,
        ],
        "className": "weather-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              24,
              <span
                className="weather-card__temperature__celcius"
>
                °
</span>,
            ],
            "className": "weather-card__temperature--normal",
          },
          "ref": null,
          "rendered": Array [
            24,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "°",
                "className": "weather-card__temperature__celcius",
              },
              "ref": null,
              "rendered": "°",
              "type": "span",
            },
          ],
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <div
                className="weather-card__footer__row"
>
                <div
                                className="weather-card__update-at"
                >
                                <p>
                                                Updated at 
                                                <time
                                                                dateTime={undefined}
                                                />
                                </p>
                </div>
</div>,
            ],
            "className": "weather-card__footer",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="weather-card__update-at"
>
                  <p>
                                    Updated at 
                                    <time
                                                      dateTime={undefined}
                                    />
                  </p>
</div>,
                "className": "weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Updated at 
                    <time
                                        dateTime={undefined}
                    />
</p>,
                  "className": "weather-card__update-at",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Updated at ",
                      <time
                        dateTime={undefined}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Updated at ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": undefined,
                        "dateTime": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "time",
                    },
                  ],
                  "type": "p",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<WeatherCard /> show details 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    showDetails={true}
    weather={
        Object {
            "temperature": 26,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="weather-card__temperature--hot"
>
          26
          <span
                    className="weather-card__temperature__celcius"
          >
                    °
          </span>
</span>,
        <section
          className="weather-card__footer"
>
          <div
                    className="weather-card__details weather-card__footer__row"
          >
                    <dl
                              className="weather-card__definition-list"
                    >
                              <div
                                        className="weather-card__definition-list__column"
                              >
                                        <dt>
                                                  Humidity
                                        </dt>
                                        <dd>
                                                  <span
                                                            className="weather-card__unit"
                                                  >
                                                            %
                                                  </span>
                                        </dd>
                              </div>
                              <div
                                        className="weather-card__definition-list__column"
                              >
                                        <dt>
                                                  Pressure
                                        </dt>
                                        <dd>
                                                  <span
                                                            className="weather-card__unit"
                                                  >
                                                            hPa
                                                  </span>
                                        </dd>
                              </div>
                    </dl>
          </div>
          <div
                    className="weather-card__footer__row"
          >
                    <div
                              className="weather-card__update-at"
                    >
                              <p>
                                        Updated at 
                                        <time
                                                  dateTime={undefined}
                                        />
                              </p>
                    </div>
          </div>
</section>,
      ],
      "className": "weather-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            26,
            <span
              className="weather-card__temperature__celcius"
>
              °
</span>,
          ],
          "className": "weather-card__temperature--hot",
        },
        "ref": null,
        "rendered": Array [
          26,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "°",
              "className": "weather-card__temperature__celcius",
            },
            "ref": null,
            "rendered": "°",
            "type": "span",
          },
        ],
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="weather-card__details weather-card__footer__row"
>
              <dl
                            className="weather-card__definition-list"
              >
                            <div
                                          className="weather-card__definition-list__column"
                            >
                                          <dt>
                                                        Humidity
                                          </dt>
                                          <dd>
                                                        <span
                                                                      className="weather-card__unit"
                                                        >
                                                                      %
                                                        </span>
                                          </dd>
                            </div>
                            <div
                                          className="weather-card__definition-list__column"
                            >
                                          <dt>
                                                        Pressure
                                          </dt>
                                          <dd>
                                                        <span
                                                                      className="weather-card__unit"
                                                        >
                                                                      hPa
                                                        </span>
                                          </dd>
                            </div>
              </dl>
</div>,
            <div
              className="weather-card__footer__row"
>
              <div
                            className="weather-card__update-at"
              >
                            <p>
                                          Updated at 
                                          <time
                                                        dateTime={undefined}
                                          />
                            </p>
              </div>
</div>,
          ],
          "className": "weather-card__footer",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <dl
                className="weather-card__definition-list"
>
                <div
                                className="weather-card__definition-list__column"
                >
                                <dt>
                                                Humidity
                                </dt>
                                <dd>
                                                <span
                                                                className="weather-card__unit"
                                                >
                                                                %
                                                </span>
                                </dd>
                </div>
                <div
                                className="weather-card__definition-list__column"
                >
                                <dt>
                                                Pressure
                                </dt>
                                <dd>
                                                <span
                                                                className="weather-card__unit"
                                                >
                                                                hPa
                                                </span>
                                </dd>
                </div>
</dl>,
              "className": "weather-card__details weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="weather-card__definition-list__column"
>
                    <dt>
                                        Humidity
                    </dt>
                    <dd>
                                        <span
                                                            className="weather-card__unit"
                                        >
                                                            %
                                        </span>
                    </dd>
</div>,
                  <div
                    className="weather-card__definition-list__column"
>
                    <dt>
                                        Pressure
                    </dt>
                    <dd>
                                        <span
                                                            className="weather-card__unit"
                                        >
                                                            hPa
                                        </span>
                    </dd>
</div>,
                ],
                "className": "weather-card__definition-list",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <dt>
                        Humidity
</dt>,
                      <dd>
                        <span
                                                className="weather-card__unit"
                        >
                                                %
                        </span>
</dd>,
                    ],
                    "className": "weather-card__definition-list__column",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Humidity",
                      },
                      "ref": null,
                      "rendered": "Humidity",
                      "type": "dt",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          undefined,
                          <span
                            className="weather-card__unit"
>
                            %
</span>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        undefined,
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "%",
                            "className": "weather-card__unit",
                          },
                          "ref": null,
                          "rendered": "%",
                          "type": "span",
                        },
                      ],
                      "type": "dd",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <dt>
                        Pressure
</dt>,
                      <dd>
                        <span
                                                className="weather-card__unit"
                        >
                                                hPa
                        </span>
</dd>,
                    ],
                    "className": "weather-card__definition-list__column",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Pressure",
                      },
                      "ref": null,
                      "rendered": "Pressure",
                      "type": "dt",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          undefined,
                          <span
                            className="weather-card__unit"
>
                            hPa
</span>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        undefined,
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "hPa",
                            "className": "weather-card__unit",
                          },
                          "ref": null,
                          "rendered": "hPa",
                          "type": "span",
                        },
                      ],
                      "type": "dd",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "dl",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="weather-card__update-at"
>
                <p>
                                Updated at 
                                <time
                                                dateTime={undefined}
                                />
                </p>
</div>,
              "className": "weather-card__footer__row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Updated at 
                  <time
                                    dateTime={undefined}
                  />
</p>,
                "className": "weather-card__update-at",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Updated at ",
                    <time
                      dateTime={undefined}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Updated at ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "dateTime": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "time",
                  },
                ],
                "type": "p",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="weather-card__temperature--hot"
>
            26
            <span
                        className="weather-card__temperature__celcius"
            >
                        °
            </span>
</span>,
          <section
            className="weather-card__footer"
>
            <div
                        className="weather-card__details weather-card__footer__row"
            >
                        <dl
                                    className="weather-card__definition-list"
                        >
                                    <div
                                                className="weather-card__definition-list__column"
                                    >
                                                <dt>
                                                            Humidity
                                                </dt>
                                                <dd>
                                                            <span
                                                                        className="weather-card__unit"
                                                            >
                                                                        %
                                                            </span>
                                                </dd>
                                    </div>
                                    <div
                                                className="weather-card__definition-list__column"
                                    >
                                                <dt>
                                                            Pressure
                                                </dt>
                                                <dd>
                                                            <span
                                                                        className="weather-card__unit"
                                                            >
                                                                        hPa
                                                            </span>
                                                </dd>
                                    </div>
                        </dl>
            </div>
            <div
                        className="weather-card__footer__row"
            >
                        <div
                                    className="weather-card__update-at"
                        >
                                    <p>
                                                Updated at 
                                                <time
                                                            dateTime={undefined}
                                                />
                                    </p>
                        </div>
            </div>
</section>,
        ],
        "className": "weather-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              26,
              <span
                className="weather-card__temperature__celcius"
>
                °
</span>,
            ],
            "className": "weather-card__temperature--hot",
          },
          "ref": null,
          "rendered": Array [
            26,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "°",
                "className": "weather-card__temperature__celcius",
              },
              "ref": null,
              "rendered": "°",
              "type": "span",
            },
          ],
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="weather-card__details weather-card__footer__row"
>
                <dl
                                className="weather-card__definition-list"
                >
                                <div
                                                className="weather-card__definition-list__column"
                                >
                                                <dt>
                                                                Humidity
                                                </dt>
                                                <dd>
                                                                <span
                                                                                className="weather-card__unit"
                                                                >
                                                                                %
                                                                </span>
                                                </dd>
                                </div>
                                <div
                                                className="weather-card__definition-list__column"
                                >
                                                <dt>
                                                                Pressure
                                                </dt>
                                                <dd>
                                                                <span
                                                                                className="weather-card__unit"
                                                                >
                                                                                hPa
                                                                </span>
                                                </dd>
                                </div>
                </dl>
</div>,
              <div
                className="weather-card__footer__row"
>
                <div
                                className="weather-card__update-at"
                >
                                <p>
                                                Updated at 
                                                <time
                                                                dateTime={undefined}
                                                />
                                </p>
                </div>
</div>,
            ],
            "className": "weather-card__footer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <dl
                  className="weather-card__definition-list"
>
                  <div
                                    className="weather-card__definition-list__column"
                  >
                                    <dt>
                                                      Humidity
                                    </dt>
                                    <dd>
                                                      <span
                                                                        className="weather-card__unit"
                                                      >
                                                                        %
                                                      </span>
                                    </dd>
                  </div>
                  <div
                                    className="weather-card__definition-list__column"
                  >
                                    <dt>
                                                      Pressure
                                    </dt>
                                    <dd>
                                                      <span
                                                                        className="weather-card__unit"
                                                      >
                                                                        hPa
                                                      </span>
                                    </dd>
                  </div>
</dl>,
                "className": "weather-card__details weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="weather-card__definition-list__column"
>
                      <dt>
                                            Humidity
                      </dt>
                      <dd>
                                            <span
                                                                  className="weather-card__unit"
                                            >
                                                                  %
                                            </span>
                      </dd>
</div>,
                    <div
                      className="weather-card__definition-list__column"
>
                      <dt>
                                            Pressure
                      </dt>
                      <dd>
                                            <span
                                                                  className="weather-card__unit"
                                            >
                                                                  hPa
                                            </span>
                      </dd>
</div>,
                  ],
                  "className": "weather-card__definition-list",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <dt>
                          Humidity
</dt>,
                        <dd>
                          <span
                                                    className="weather-card__unit"
                          >
                                                    %
                          </span>
</dd>,
                      ],
                      "className": "weather-card__definition-list__column",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Humidity",
                        },
                        "ref": null,
                        "rendered": "Humidity",
                        "type": "dt",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            undefined,
                            <span
                              className="weather-card__unit"
>
                              %
</span>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          undefined,
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "%",
                              "className": "weather-card__unit",
                            },
                            "ref": null,
                            "rendered": "%",
                            "type": "span",
                          },
                        ],
                        "type": "dd",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <dt>
                          Pressure
</dt>,
                        <dd>
                          <span
                                                    className="weather-card__unit"
                          >
                                                    hPa
                          </span>
</dd>,
                      ],
                      "className": "weather-card__definition-list__column",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Pressure",
                        },
                        "ref": null,
                        "rendered": "Pressure",
                        "type": "dt",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            undefined,
                            <span
                              className="weather-card__unit"
>
                              hPa
</span>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          undefined,
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "hPa",
                              "className": "weather-card__unit",
                            },
                            "ref": null,
                            "rendered": "hPa",
                            "type": "span",
                          },
                        ],
                        "type": "dd",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "dl",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="weather-card__update-at"
>
                  <p>
                                    Updated at 
                                    <time
                                                      dateTime={undefined}
                                    />
                  </p>
</div>,
                "className": "weather-card__footer__row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Updated at 
                    <time
                                        dateTime={undefined}
                    />
</p>,
                  "className": "weather-card__update-at",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Updated at ",
                      <time
                        dateTime={undefined}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Updated at ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": undefined,
                        "dateTime": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "time",
                    },
                  ],
                  "type": "p",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
